# foodie-hotspot-recommendation-service

./: .gitignore  .gitmessage  README.md  pyproject.toml  redis.conf  redis_delete.sh  redis_exec.sh  requirements.txt
accounts/: models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
auths/: serializers.py  urls.py  views.py
config/: root_urls.py  settings.py  tasks.py
foodiehotspot/: apps.py
foodiehotspots/: apps.py  models.py  scheduler.py  schedulers.py  serializers.py  tasks.py  tests.py  urls.py  views.py
foodiehotspots/migrations/: 0001_initial.py  0002_rate_created_at.py  0003_alter_restaurant_latitude_alter_restaurant_longitude.py
utils/: custom_logger.py  get_csv.py  get_data.py  locust_test.py  test_scheduler.py
utils/location/: location_data.csv  location_load.py
